tests/machine/x/c/load_yaml.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c:11:9: error: duplicate member ‘name’
   11 |   char *name;
      |         ^~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:12:7: error: duplicate member ‘age’
   12 |   int age;
      |       ^~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:13:9: error: duplicate member ‘email’
   13 |   char *email;
      |         ^~~~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
