tests/machine/x/c/load_yaml.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Person Person;

typedef struct {
  const char *name;
  int age;
  const char *email;
  const char *name;
  int age;
  const char *email;
} person_t;

typedef struct {
  const char *name;
  const char *email;
} adults_item_t;
typedef struct {
  int len;
  adults_item_t *data;
} adults_item_list_t;
adults_item_list_t create_adults_item_list(int len) {
  adults_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(adults_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Person {
  char *name;
  int age;
  char *email;
} Person;
typedef struct {
  int len;
  person_t *data;
} person_list_t;
person_list_t create_person_list(int len) {
  person_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(person_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  person_t arr1[] = {(person_t){.name = "Alice",
                                .age = 30,
                                .email = "alice@example.com",
                                .name = "Alice",
                                .age = 30,
                                .email = "alice@example.com"},
                     (person_t){.name = "Bob",
                                .age = 15,
                                .email = "bob@example.com",
                                .name = "Bob",
                                .age = 15,
                                .email = "bob@example.com"},
                     (person_t){.name = "Charlie",
                                .age = 20,
                                .email = "charlie@example.com",
                                .name = "Charlie",
                                .age = 20,
                                .email = "charlie@example.com"}};
  person_list_t tmp2 = {3, arr1};
  person_list_t people = tmp2;
  adults_item_list_t tmp3 = create_adults_item_list(people.len);
  int tmp4 = 0;
  for (int tmp5 = 0; tmp5 < people.len; tmp5++) {
    person_t p = people.data[tmp5];
    if (!(p.age >= 18)) {
      continue;
    }
    tmp3.data[tmp4] = (adults_item_t){.name = p.name, .email = p.email};
    tmp4++;
  }
  tmp3.len = tmp4;
  adults_item_list_t adults = tmp3;
  for (int tmp6 = 0; tmp6 < adults.len; tmp6++) {
    adults_item_t a = adults.data[tmp6];
    printf("%s %s\n", a.name, a.email);
  }
  free(adults.data);
  return 0;
}
int main() { return _mochi_main(); }
